layout: fix score layout on mobile

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -112,7 +112,7 @@ body {
   .navbar-text {
     float: left;
     margin-right: 0px;
-    margin-left: 15px;
+    margin-left: 3px;
   }
 }
 
